# stm32x

./: .gitignore  LICENSE  Makefile  README.md  format.mk  makefile  makefile.F0xx.inc  makefile.F37x.inc  makefile.F4xx.inc  readme.md  stm32x.mk
F0xx/: makefile
F37x/: makefile
include/stm32f0/: i2c_slave_helper.h
include/stm32x/: stm32x.h  stm32x_bitband.h  stm32x_core.h  stm32x_debug.h  stm32x_gpio.h  stm32x_gpio_utils.h  stm32x_math.h  stm32x_model.h  stm32x_page_flash.h  stm32x_sector_flash.h  stm32x_switchstate.h
include/util/: util_clocks.h  util_fourcc.h  util_macros.h  util_memory_pool.h  util_pin_trace.h  util_range_scaler.h  util_ringbuffer.h  util_storage.h  util_stream_buffer.h  util_templates.h  util_tracebuffer.h
linker/: stm32f0xx_flash.ld.in  stm32f37x_flash.ld.in  stm32f4xx_flash.ld.in
mk/: utils.mk
scripts/: bmp_flash_swd.scr  bmp_gdb_swd.scr
src/: stm32x_core.cc
stm32f0/: i2c_slave_helper.h  stm32f0_flash.cc  stm32f0_flash.h  stm32f0_i2cx_isr.h
stm32x/: stm32x.h  stm32x_bitband.h  stm32x_core.cc  stm32x_core.h  stm32x_debug.h  stm32x_gpio.h  stm32x_math.h  stm32x_model.h  stm32x_page_flash.cc  stm32x_page_flash.h  stm32x_switchstate.h
test/: makefile  meson.build  stm32x_test.cc  test_sector_detail.cc  test_storage.cc
tools/: f0_adc_tconv.py  f4_adc_tconv.py  resource_compiler.py  stm32x_cubemx_gpio_export.py
util/: util_clocks.h  util_gate_state.h  util_lut.h  util_macros.h  util_memory_pool.h  util_pin_trace.h  util_range_scaler.h  util_ringbuffer.h  util_storage.h  util_templates.h  util_tracebuffer.h
(+10 files in other folders)
